# TrabajoResistencias

./: CMakeLists.txt  codificador.cpp  codificador.h  codificador.ui  decodificador.cpp  decodificador.h  decodificador.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resistencias_es_MX.ts
Includes/CPP/: FactoriaResistencia.cpp
Includes/HEADER/: FactoriaResistencia.h  Patrones.h
